--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<h1>Restaurants</h1>
+
+
+<% @restaurants.each do |restaurant| %>
+  <div>
+    <h2><%= restaurant.name %></h2>
+    <h3> <%= restaurant.category %></h3>
+    <%= link_to "More details", restaurant_path(restaurant) %>
+  </div>
+<% end %>
