--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @restaurant.name %></h1>
+
 <h2><%= @restaurant.category %></h2>
 <p><%= @restaurant.address %></p>
 <p><%= @restaurant.phone_number %></p>
@@ -6,9 +7,17 @@
 <h2>Reviews</h2>
 
 <% @restaurant.reviews.each do |review| %>
-  <div>
-    <h2><%= "*" * review.rating %></h2>
-    <p><%= review.content %></p>
-  </div>
-
+  <%= render "restaurants/card_review", review: review %>
 <% end %>
+
+
+
+
+
+
+<h2>Write your review:</h2>
+
+<%= render "restaurants/form", restaurant: @restaurant, review: @review %>
+
+
+<%= link_to "Back to restaurants", restaurants_path %>
