--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for([restaurant, review]) do |f| %>
   <%= f.input :rating %>
   <%= f.input :content %>
-  <%= f.submit %>
+  <%= f.submit class: "btn btn-primary"%>
 <% end %>
