--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -5,5 +5,5 @@
   <%= f.input :category %>
   <%= f.input :address %>
   <%= f.input :phone_number %>
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
